--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>GameClock</title>
     <link href="style/clock.css" rel="stylesheet" />
-    <script defer src="src/clock.js"></script>
+    <script type="module" src="src/clock.js"></script>
+    <script nomodule defer src="src/clock.bundle.js"></script>
     <link rel="preconnect" href="//getinsights.io" />
     <link rel="modulepreload" href="/web_modules/insights-js.js" />
 
