Remove absolute paths

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="src/clock.js"></script>
     <script nomodule defer src="src/clock.bundle.js"></script>
     <link rel="preconnect" href="//getinsights.io" />
-    <link rel="modulepreload" href="/web_modules/insights-js.js" />
+    <link rel="modulepreload" href="web_modules/insights-js.js" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/app-32.png" />
