Add github link

--- a/settings.html
+++ b/settings.html
@@ -45,6 +45,8 @@
         <a href="https://play.google.com/store/apps/details?id=com.chess.clock&hl=en">Chess Clock Android app</a>.
       </p>
 
+      <p class="about inner">Edit on <a href="https://github.com/NotWoods/gameclock">GitHub</a></p>
+
       <p class="about inner">
         Created by
         <a class="about__link" href="https://tigeroakes.com">
