Add social card

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icons/app-512.png" />
     <meta name="theme-color" content="#312e2b" />
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Not_Woods" />
+    <meta name="twitter:title" content="GameClock" />
+    <meta name="twitter:description" content="Time your chess games, jenga games, and other board games." />
+    <meta name="twitter:image" content="https://notwoods.github.io/gameclock/icons/github_social.png" />
+    <meta name="og:title" content="GameClock" />
+    <meta name="og:type" content="" />
+    <meta name="og:image" content="https://notwoods.github.io/gameclock/icons/github_social.png" />
+    <meta name="og:url" content="https://notwoods.github.io/gameclock" />
+    <meta name="og:description" content="Time your chess games, jenga games, and other board games." />
   </head>
 
   <body>
