--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style/clock.css" rel="stylesheet" />
     <script type="module" src="src/clock.js"></script>
     <script nomodule defer src="src/clock.bundle.js"></script>
+    <link rel="preconnect" href="//cdn.pika.dev" />
     <link rel="preconnect" href="//getinsights.io" />
     <link rel="modulepreload" href="src/libs.js" />
     <link rel="modulepreload" href="web_modules/insights-js.js" />
