--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icons/app-512.png" />
     <meta name="theme-color" content="#312e2b" />
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
+    <meta name="monetization" content="$ilp.uphold.com/p2WKq3nJHA8w" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Not_Woods" />
