--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>GameClock</title>
-    <link href="style/clock.css" rel="stylesheet" />
-    <script type="module" src="src/clock.js"></script>
-    <script nomodule defer src="src/clock.bundle.js"></script>
-    <link rel="preconnect" href="//cdn.pika.dev" />
+    <link href="./style/clock.css" rel="stylesheet" />
+    <script type="module" src="./src/clock.js"></script>
     <link rel="preconnect" href="//getinsights.io" />
-    <link rel="modulepreload" href="src/libs.js" />
-    <link rel="modulepreload" href="web_modules/insights-js.js" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/app-32.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="icons/app-512.png" />
     <link rel="icon" type="image/svg+xml" sizes="any" href="icons/app.svg" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icons/app-512.png" />
     <meta name="theme-color" content="#312e2b" />
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
