Switch to fathom analytics

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>GameClock</title>
     <link href="./style/clock.css" rel="stylesheet" />
     <script type="module" src="./src/clock.js"></script>
-    <link rel="preconnect" href="//getinsights.io" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/app-32.png" />
@@ -27,6 +26,13 @@
     <meta name="og:image" content="https://notwoods.github.io/gameclock/icons/github_social.png" />
     <meta name="og:url" content="https://notwoods.github.io/gameclock" />
     <meta name="og:description" content="Time your chess games, jenga games, and other board games." />
+
+    <script
+      src="https://fortunate-twentyseven.tigeroakes.com/script.js"
+      data-site="FMVLGCSF"
+      data-honor-dnt="true"
+      defer
+    ></script>
   </head>
 
   <body>
