--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,6 @@
     <title>GameClock Settings</title>
     <link href="./style/settings.css" rel="stylesheet" />
     <script type="module" src="./src/settings.js"></script>
-    <link rel="preconnect" href="//getinsights.io" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" sizes="32x32" href="icons/app-32.png" />
@@ -15,6 +14,13 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icons/app-512.png" />
     <meta name="theme-color" content="#312e2b" />
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
+
+    <script
+      src="https://fortunate-twentyseven.tigeroakes.com/script.js"
+      data-site="FMVLGCSF"
+      data-honor-dnt="true"
+      defer
+    ></script>
   </head>
 
   <body>
