Update canonical URL

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
     <meta name="monetization" content="$ilp.uphold.com/p2WKq3nJHA8w" />
 
+    <link rel="canonical" content="https://games.tigeroakes.com/gameclock/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Not_Woods" />
     <meta name="twitter:title" content="GameClock" />
