--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icons/app-512.png" />
     <meta name="theme-color" content="#312e2b" />
     <meta name="description" content="Time your chess games, jenga games, and other board games." />
+    <link rel="canonical" content="https://games.tigeroakes.com/gameclock/settings" />
 
     <script
       src="https://fortunate-twentyseven.tigeroakes.com/script.js"
